[workspace]
members = [
    "dapp/dod/actor",
    "dapp/dod/mod",
    "libs/dod_utils",
]

[workspace.dependencies]
candid = "0.10.10"
ic-cdk = { version = "0.16.0" }
ic-cdk-timers = "0.10.0"
ic-cdk-macros = "0.16.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11.2"
ic-ledger-types = "0.13.0"
ic-stable-structures = "0.6.0"
ic-certified-map = "0.4.0"
icrc-ledger-types = "0.1.6"
ic0 = "0.23.0"
ciborium = "0.2.1"

ego_types = { git = "https://github.com/EgoDevs/ego", branch = "update_deps" }
ego_macros = { git = "https://github.com/EgoDevs/ego", branch = "update_deps" }
ego_lib = { git = "https://github.com/EgoDevs/ego", branch = "update_deps" }
ego_utils = { git = "https://github.com/EgoDevs/ego", branch = "update_deps" }
ego_inner_rpc = { git = "https://github.com/EgoDevs/ego", branch = "update_deps" }


async-trait = "0.1.57"

md5 = "0.7.0"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }

hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.11.0"

mockall = "0.11.2"
tokio = { version = "1.21.0", features = ["full"] }
sha2 = "0.10.6"

multibase = "0.9.1"


simple_asn1 = "0.6.2"
bitcoin = { version = "0.30.2", features = ["serde", "base64"] }
byteorder = "1.5.0"
base64 = "0.22.1"
k256 = { version = "0.13.2", default-features = false, features = [
    "ecdsa",
    "sha256",
    "pem",
] }

[profile.release]
lto = true
debug = true
opt-level = 'z'
